<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <Button
        android:id="@+id/bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_alignLeft="@+id/bt4"
        android:layout_alignRight="@+id/bt4"        
        android:minWidth="60dp"
        android:minHeight="90dp"
        android:text="@string/um" />
    
    <Button
        android:id="@+id/bt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@+id/bt1"
        android:layout_alignRight="@+id/bt5"
        android:minWidth="60dp"
        android:minHeight="90dp"
        android:text="@string/dois" />
    
    <Button
        android:id="@+id/bt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/bt2"
        android:layout_marginTop="50dp"
        android:minWidth="60dp"
        android:minHeight="90dp"
        android:text="@string/tres" />

    <Button
        android:id="@+id/btSom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@+id/bt3"
        android:layout_alignLeft="@+id/btMul"
        android:minWidth="60dp"
        android:minHeight="90dp"
        android:text="@string/mais" />
    
    <Button
        android:id="@+id/btBs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/btSom"
        android:minWidth="50dp"
        android:minHeight="175dp"
        android:text="@string/BS" />

    <TextView
        android:id="@+id/tvNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btBs"
        android:lines="1"
        android:maxLines="1"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/quarenta" />
    
    <Button
        android:id="@+id/bt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:minWidth="60dp"
        android:minHeight="90dp"
        android:text="@string/quatro" />
    
    <Button
        android:id="@+id/bt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/bt4"
        android:layout_marginTop="135dp"
        android:minHeight="90dp"
        android:minWidth="60dp"        
        android:text="@string/cinco" />
    
    <Button
        android:id="@+id/bt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/bt5"
        android:layout_marginTop="135dp"
        android:minHeight="90dp"
        android:minWidth="60dp"
        android:text="@string/seis" />
    
    <Button
        android:id="@+id/btSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/bt6"
        android:minWidth="60dp"
        android:minHeight="90dp"
        android:layout_marginTop="135dp"
        android:text="@string/menos" />
    
    <Button
        android:id="@+id/bt7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="60dp"        
        android:minHeight="90dp"        
        android:layout_marginTop="219dp"        
        android:text="@string/sete" />
    
    <Button
        android:id="@+id/bt8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/bt7"
        android:minWidth="60dp"
        android:minHeight="90dp"   
        android:layout_marginTop="219dp"
        android:text="@string/oito" />
    
    <Button
        android:id="@+id/bt9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/bt8"
        android:minWidth="60dp"
        android:minHeight="90dp"   
        android:layout_marginTop="219dp"
        android:text="@string/nove" />
    
     <Button
        android:id="@+id/btMul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/bt9"
        android:minWidth="60dp"
        android:minHeight="90dp"   
        android:layout_marginTop="219dp"
        android:text="@string/vezes" />
     
      <Button
        android:id="@+id/btIgual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="219dp"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/btMul"
        android:minWidth="50dp"
        android:minHeight="190dp"        
        android:text="@string/Igual" />
     
      <Button
        android:id="@+id/btC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:minWidth="60dp"
        android:minHeight="63dp"
        android:text="@string/c" />
      
      <Button
        android:id="@+id/bt0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btC"
        android:minWidth="60dp"
        android:minHeight="63dp"
        android:text="@string/zero" />
      
      <Button
        android:id="@+id/btPonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/bt0"
        android:minWidth="60dp" 
        android:minHeight="63dp"     
        android:text="@string/ponto" />
      
      <Button
        android:id="@+id/btDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btPonto"
        android:minWidth="60dp" 
        android:minHeight="63dp"           
        android:text="@string/div" />
      

      
      
      
    
    
    
    
    
    
    

</RelativeLayout>